# DungeonsOfDreagoth

./: README.md  pyproject.toml
doc/: ARCHITECTURE.md
dreagoth/: __init__.py  __main__.py  app.py
dreagoth/ai/: cache.py  client.py  dm.py  fallback.py  llama_provider.py  mistral_provider.py  provider.py
dreagoth/audio/: sound_manager.py  tone_generator.py
dreagoth/character/: character.py
dreagoth/combat/: combat_engine.py  spells.py
dreagoth/core/: command_parser.py  constants.py  dice.py  events.py  game_state.py  noise.py  save_load.py
dreagoth/data/: equipment.json  fallback_descriptions.json  monsters.json  npcs.json  sounds.json  spells.json  unique_items.json
dreagoth/dungeon/: corridor.py  dungeon_level.py  fov.py  generator.py  pathfinding.py  populator.py  room.py  tiles.py  traps.py
dreagoth/entities/: item.py  magic_items.py  monster.py  npc.py
dreagoth/quest/: quest.py
dreagoth/ui/: colors.py  command_bar.py  first_person_panel.py  inspect_screen.py  inventory_screen.py  log_panel.py  map_panel.py  merchant_screen.py  stats_panel.py
tests/: test_ai_providers.py  test_audio.py  test_bugfixes.py  test_character.py  test_commands.py  test_doors.py  test_dungeon.py  test_item_specials.py  test_lighting.py  test_llama_provider.py  test_magic_items.py  test_monster_ai.py  test_npcs.py  test_quests.py  test_resurrect.py  test_save_load.py  test_scrolls.py  test_spells.py  test_traps.py
