[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dungeons-of-dreagoth"
version = "0.1.0"
description = "Dungeons of Dreagoth II - AI-powered dungeon crawler"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0",
    "numpy>=1.26",
    "pydantic>=2.5",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]
audio = [
    "playsound3>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dreagoth"]

[project.scripts]
dreagoth = "dreagoth.__main__:main"
